// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Breadcrumb Advanced Breadcrumbs with options per data item 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        className="css-fih44h-Breadcrumb"
      >
        <li>
          <div
            className="css-1po3gjx-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/first-level"
              onClick={[Function]}
            >
              First Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li
          role="listitem"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            className="css-1w7gjlo-BreadcrumbCollapsed"
          >
            <span
              className="css-hjigrk-BreadcrumbCollapsed"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-il5cqq-Icon"
                />
              </span>
            </span>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1po3gjx-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/forth-level"
              onClick={[Function]}
            >
              Forth Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-e8ptyq-BreadcrumbItem"
          >
            <div
              role="button"
            >
              <div
                className="css-4yevxh-Menu"
              >
                <button
                  className="css-n7mi60-Button"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="css-1ndrhvc-Button"
                  >
                    <div
                      className="css-1sbca9g-Button"
                    >
                      <span
                        className="css-1gnbc76-Icon"
                      >
                        <span
                          className="css-14ifw5v-Icon"
                        />
                      </span>
                    </div>
                    <span>
                      Fifth Level
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Breadcrumb showcase 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <button
          onClick={[Function]}
          type="button"
        >
          Add data to Breadcrumb
        </button>
        <ol
          aria-label="Breadcrumb"
          className="css-fih44h-Breadcrumb"
        >
          <li>
            <div
              className="css-1po3gjx-BreadcrumbItem"
            >
              <a
                className="css-kllbug"
                href="/first-level"
                onClick={[Function]}
              >
                First Level
              </a>
              <span
                className="css-x63yja-Separator"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1bxgyna-Icon"
                  />
                </span>
              </span>
            </div>
          </li>
          <li
            role="listitem"
            style={
              Object {
                "margin": "auto",
              }
            }
          >
            <div
              className="css-1w7gjlo-BreadcrumbCollapsed"
            >
              <span
                className="css-hjigrk-BreadcrumbCollapsed"
                onClick={[Function]}
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-il5cqq-Icon"
                  />
                </span>
              </span>
              <span
                className="css-x63yja-Separator"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1bxgyna-Icon"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="css-1po3gjx-BreadcrumbItem"
            >
              <a
                className="css-kllbug"
                href="/forth-level"
                onClick={[Function]}
              >
                Forth Level
              </a>
              <span
                className="css-x63yja-Separator"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1bxgyna-Icon"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="css-e8ptyq-BreadcrumbItem"
            >
              <div
                role="button"
              >
                <div
                  className="css-4yevxh-Menu"
                >
                  <button
                    className="css-n7mi60-Button"
                    data-testid="button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="css-1ndrhvc-Button"
                    >
                      <div
                        className="css-1sbca9g-Button"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                        >
                          <span
                            className="css-14ifw5v-Icon"
                          />
                        </span>
                      </div>
                      <span>
                        Fifth Level
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        className="css-fih44h-Breadcrumb"
      >
        <li>
          <div
            className="css-1po3gjx-BreadcrumbItem"
          >
            <div>
              First Level
            </div>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1po3gjx-BreadcrumbItem"
          >
            <div>
              Second Level
            </div>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-e8ptyq-BreadcrumbItem"
          >
            <div>
              Third Level
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs with options 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        className="css-fih44h-Breadcrumb"
      >
        <li>
          <div
            className="css-1po3gjx-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/first-level"
              onClick={[Function]}
            >
              First Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li
          role="listitem"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            className="css-1w7gjlo-BreadcrumbCollapsed"
          >
            <span
              className="css-hjigrk-BreadcrumbCollapsed"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-il5cqq-Icon"
                />
              </span>
            </span>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1po3gjx-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/forth-level"
              onClick={[Function]}
            >
              Forth Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1bxgyna-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-e8ptyq-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/fifth-level"
              onClick={[Function]}
            >
              Fifth Level
            </a>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
